<resources>
    <string name="app_name">Ambitine</string>
    <string name="logTag">GuysDEBUG</string>

    <!--    Login activity -->
    <string name="login_input">Username</string>
    <string name="password_activity">Password</string>
    <string name="login_button_text">SIGN IN</string>
    <string name="app_name_login">Ambitine</string>
    <string name="underline_question">Not yet been with us? Lost?</string>
    <string name="registration_txt_link">Sign up.</string>
    <string name="password_forgot_link">Forgot password?</string>
    <string name="divider_for_page_annotations">divider for page</string>
    <string name="promises_nav_title">Promises</string>
    <string name="bottom_nav_profile_title">Profile</string>
    <string name="bottom_nav_feed_title">Feed</string>
    <string name="new_promise">New promise</string>
    <string name="feed_item_description">Feed item</string>
    <string name="username_feed_mock">Username</string>
    <string name="desc_mock">This is short description of your promise</string>
    <string name="sum_promise_desc">Sum of your promises</string>
    <string name="timer_feed_mock">Time left</string>
    <string name="feed_default_total">1000</string>
    <!--    Login activity -->

    <!--    SignUp activity -->
    <string name="sign_up_button_text">SIGN UP</string>
    <string name="make_a_promise">Make a promise</string>
    <string name="deposit_for_you_promise">Deposit for you promise ( in $ )</string>
    <string name="promise_description">Promise description</string>
    <string name="remember_the_more_money_the_more_motivation">Remember, the more money the more motivation</string>
    <string name="tell_us_what_you_promised_to_the_other_person">Tell us what you promised to the other person.</string>
    <string name="promise_person">Choose the person you want to promise something</string>
    <string name="type_username">Type username</string>
    <string name="promise_date_fullfill">Choose a date and time to fulfill your promise.</string>
    <!--    SignUp activity -->

    <!--    Profile activity -->
    <string name="upload_button">Photo upload button</string>
    <string name="logout_button">Log out</string>
    <!--    Profile activity -->

    <string name="no_promises">You have no promises so far.</string>

    <!--    Failure messages-->
    <string name="profile_data_error">Profile data receiving error</string>
    <string name="login_user_conflict">This nickname already exists</string>
    <string name="login_failure_case">Login failed</string>
    <string name="login_wrong_data">Username or password is incorrect</string>
    <string name="signup_failure_case">Signup failed</string>
    <!-- Failed promise handle-->
    <string name="already_resolved">This promise already resolved</string>
    <string name="piechart_center">Promises count</string>
    <string name="wallet_title">Your wallet address</string>

<!--    Handle new promise failure-->
    <string name="wrong_balance_newpromise">Need more gold</string>
    <string name="wrong_reciever_newpromise">Wrong promice receiver username</string>
    <string name="wrond_new_promise_failed">Something gonna wrong, we already fixing</string>
    <string name="wrong_deposit_value">Please set deposit value</string>
    <string name="wrong_description_value">Please fill description field</string>
    <string name="promised">Promised</string>
    <string name="balance">Balance</string>


</resources>
